--- a/manipulability_metrics_examples/config/timda_left_joints.yaml
+++ b/manipulability_metrics_examples/config/timda_left_joints.yaml
@@ -1,7 +1,104 @@
-- l_joint_1
-- l_joint_2
-- l_joint_3
-- l_joint_4
-- l_joint_5
-- l_joint_6
-- l_joint_7
+l_joint_1:
+  limit:
+    lower:     -2.8973
+    upper:      2.8973
+    velocity:   2.1750
+    effort:    87.0
+
+l_joint_2:
+  limit:
+    lower:     -1.7628
+    upper:      1.7628
+    velocity:   2.1750
+    effort:    87.0
+
+l_joint_3:
+  limit:
+    lower:     -2.8973
+    upper:      2.8973
+    velocity:   2.1750
+    effort:    87.0
+
+l_joint_4:
+  limit:
+    lower:     -3.0718
+    upper:     -0.0698
+    velocity:   2.1750
+    effort:    87.0
+
+l_joint_5:
+  limit:
+    lower:     -2.8973
+    upper:      2.8973
+    velocity:   2.6100
+    effort:    12.0
+
+l_joint_6:
+  limit:
+    lower:     -0.0175
+    upper:      3.7525
+    velocity:   2.6100
+    effort:    12.0
+
+l_joint_7:
+  limit:
+    lower:     -2.8973
+    upper:      2.8973
+    velocity:   2.6100
+    effort:    12.0
+
+
+# - l_joint_1
+# - l_joint_2
+# - l_joint_3
+# - l_joint_4
+# - l_joint_5
+# - l_joint_6
+# - l_joint_7
+
+# # joint_limits.yaml allows the dynamics properties specified in the URDF to be overwritten or augmented as needed
+
+# # For beginners, we downscale velocity and acceleration limits.
+# # You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
+# default_velocity_scaling_factor: 0.1
+# default_acceleration_scaling_factor: 0.1
+
+# # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
+# # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
+
+# l_joint_1:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_2:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_3:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_4:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_5:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_6:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+# l_joint_7:
+#   has_velocity_limits: true
+#   max_velocity: 6.5
+#   has_acceleration_limits: false
+#   max_acceleration: 0
+ 
