--- a/manipulability_metrics_examples/config/blue_arm/blue_arm_joints.yaml
+++ b/manipulability_metrics_examples/config/blue_arm/blue_arm_joints.yaml
@@ -1,7 +1,7 @@
-- blue_arm_joint1
-- blue_arm_joint2
-- blue_arm_joint3
-- blue_arm_joint4
-- blue_arm_joint5
-- blue_arm_joint6
-- blue_arm_joint7
+- joint_1
+- joint_2
+- joint_3
+- joint_4
+- joint_5
+- joint_6
+- joint_7
