--- a/manipulability_metrics_examples/config/blue_arm/blue_arm_zeros.yaml
+++ b/manipulability_metrics_examples/config/blue_arm/blue_arm_zeros.yaml
@@ -1,7 +1,7 @@
-blue_arm_joint1: 0.0
-blue_arm_joint2: 0.0
-blue_arm_joint3: 0.0
-blue_arm_joint4: -1.5707
-blue_arm_joint5: 0.0
-blue_arm_joint6: 1.5707
-blue_arm_joint7: 0.0
+joint_1: 0.0
+joint_2: 0.0
+joint_3: 0.0
+joint_4: 0.0
+joint_5: 0.0
+joint_6: 0.0
+joint_7: 0.0
