[ok] kuka lbr iiwa 7 r800 ok

--- a/manipulability_metrics_examples/config/iiwa/iiwa_joints.yaml
+++ b/manipulability_metrics_examples/config/iiwa/iiwa_joints.yaml
@@ -1,7 +1,7 @@
-- joint_a1
-- joint_a2
-- joint_a3
-- joint_a4
-- joint_a5
-- joint_a6
-- joint_a7
+- iiwa_joint_1
+- iiwa_joint_2
+- iiwa_joint_3
+- iiwa_joint_4
+- iiwa_joint_5
+- iiwa_joint_6
+- iiwa_joint_7
