--- a/manipulability_metrics_examples/config/iiwa/iiwa_zeros.yaml
+++ b/manipulability_metrics_examples/config/iiwa/iiwa_zeros.yaml
@@ -1,7 +1,7 @@
-joint_a1: 0.0
-joint_a2: 0.0
-joint_a3: 0.0
-joint_a4: -1.5707
-joint_a5: 0.0
-joint_a6: 1.5707
-joint_a7: 0.0
+iiwa_joint_1: 0.0
+iiwa_joint_2: 0.0
+iiwa_joint_3: 0.0
+iiwa_joint_4: -1.5707
+iiwa_joint_5: 0.0
+iiwa_joint_6: 1.5707
+iiwa_joint_7: 0.0
