--- a/robot_models/iiwa7_description/CMakeLists.txt
+++ b/robot_models/iiwa7_description/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(iiwa_description)
+project(iiwa7_description)
 
 find_package(catkin REQUIRED)
 catkin_package()
