--- a/plan_robot_path/package.xml
+++ b/plan_robot_path/package.xml
@@ -66,7 +66,7 @@
   <build_depend>tf2_eigen</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
-  <build_depend>blue_arm_moveit_config</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <build_export_depend>geometric_shapes</build_export_depend>
   <build_export_depend>interactive_markers</build_export_depend>
@@ -85,7 +85,7 @@
   <build_export_depend>tf2_eigen</build_export_depend>
   <build_export_depend>tf2_geometry_msgs</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
-  <build_export_depend>blue_arm_moveit_config</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
 
   <exec_depend>geometric_shapes</exec_depend>
   <exec_depend>interactive_markers</exec_depend>
@@ -104,7 +104,7 @@
   <exec_depend>tf2_eigen</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>blue_arm_moveit_config</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
