--- a/plan_robot_path/CMakeLists.txt
+++ b/plan_robot_path/CMakeLists.txt
@@ -28,6 +28,8 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   sensor_msgs
   std_msgs
+  visualization_msgs
+  tf2_sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
