--- a/plan_robot_path/package.xml
+++ b/plan_robot_path/package.xml
@@ -69,6 +69,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
+  <build_depend>tf2_sensor_msgs</build_depend>
 
   <build_export_depend>geometric_shapes</build_export_depend>
   <build_export_depend>interactive_markers</build_export_depend>
@@ -90,6 +92,8 @@
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>visualization_msgs</build_export_depend>
+  <build_export_depend>tf2_sensor_msgs</build_export_depend>
 
   <exec_depend>geometric_shapes</exec_depend>
   <exec_depend>interactive_markers</exec_depend>
@@ -111,6 +115,9 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
+  <exec_depend>tf2_sensor_msgs</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
