fixed take pic pose (base_H_cam)

--- a/robot_moveit/cam_iiwa7_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_iiwa7_moveit_config/config/fake_controllers.yaml
@@ -11,4 +11,4 @@ controller_list:
       - iiwa_joint_7
 initial:  # Define initial robot poses per group
   - group: iiwa7
-    pose: home
+    pose: take_pic
