--- a/robot_moveit/blue_arm_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/blue_arm_moveit_config/config/fake_controllers.yaml
@@ -11,4 +11,4 @@ controller_list:
       - joint_7
 initial:  # Define initial robot poses per group
   - group: blue_arm
-    pose: home
+    pose: take_pic
