--- a/robot_moveit/cam_kr6r900_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_kr6r900_moveit_config/config/fake_controllers.yaml
@@ -9,4 +9,4 @@ controller_list:
       - joint_a6
 initial:  # Define initial robot poses per group
   - group: kr6r900sixx
-    pose: home
+    pose: take_pic
