--- a/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
@@ -9,4 +9,4 @@ controller_list:
       - wrist_3_joint
 initial:  # Define initial robot poses per group
   - group: ur5
-    pose: home
+    pose: take_pic
