--- a/robot_moveit/cam_ur5_moveit_config/config/joint_limits.yaml
+++ b/robot_moveit/cam_ur5_moveit_config/config/joint_limits.yaml
@@ -18,6 +18,11 @@ joint_limits:
     max_velocity: 3.141592653589793
     has_acceleration_limits: false
     max_acceleration: 0
+  shoulder_pan_joint:
+    has_velocity_limits: true
+    max_velocity: 3.141592653589793
+    has_acceleration_limits: false
+    max_acceleration: 0
   wrist_1_joint:
     has_velocity_limits: true
     max_velocity: 3.141592653589793
