--- a/robot_moveit/kr6r900_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/kr6r900_moveit_config/config/fake_controllers.yaml
@@ -10,4 +10,4 @@ controller_list:
       - joint_a6
 initial:  # Define initial robot poses per group
   - group: arm
-    pose: home
+    pose: take_pic
