--- a/robot_moveit/timda_single8_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/timda_single8_moveit_config/config/fake_controllers.yaml
@@ -12,4 +12,4 @@ controller_list:
       - r_tool_joint
 initial:  # Define initial robot poses per group
   - group: arm
-    pose: home
+    pose: take_pic
