--- a/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
@@ -2,6 +2,7 @@ controller_list:
   - name: fake_ur5_controller
     type: $(arg fake_execution_type)
     joints:
+      - shoulder_pan_joint
       - shoulder_lift_joint
       - elbow_joint
       - wrist_1_joint
