--- a/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5_moveit_config/config/fake_controllers.yaml
@@ -1,6 +1,5 @@
 controller_list:
   - name: fake_manipulator_controller
-    type: $(arg fake_execution_type)
     joints:
       - shoulder_pan_joint
       - shoulder_lift_joint
@@ -8,6 +7,6 @@ controller_list:
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
-initial:  # Define initial robot poses per group
+initial:  # Define initial robot poses.
   - group: manipulator
     pose: home
