--- a/robot_moveit/cam_ur5e_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5e_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: fake_ur5e_controller
+  - name: fake_manipulator_controller
     type: $(arg fake_execution_type)
     joints:
       - shoulder_pan_joint
@@ -9,5 +9,5 @@ controller_list:
       - wrist_2_joint
       - wrist_3_joint
 initial:  # Define initial robot poses per group
-  - group: ur5e
+  - group: manipulator
     pose: take_pic
