--- a/robot_moveit/cam_ur5e_moveit_config/config/kinematics.yaml
+++ b/robot_moveit/cam_ur5e_moveit_config/config/kinematics.yaml
@@ -1,5 +1,5 @@
-ur5e:
-  kinematics_solver: cached_ik_kinematics_plugin/CachedKDLKinematicsPlugin
+manipulator:
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
   goal_joint_tolerance: 0.0001
