--- a/robot_moveit/cam_ur5e_moveit_config/config/ompl_planning.yaml
+++ b/robot_moveit/cam_ur5e_moveit_config/config/ompl_planning.yaml
@@ -164,7 +164,7 @@ planner_configs:
     stop_on_each_solution_improvement: 0  # stop the planner each time a solution improvement is found. Useful for debugging. Default: 0
     use_strict_queue_ordering: 0  # sort edges in the queue at the end of the batch (0) or after each rewiring (1). Default: 0
     find_approximate_solutions: 0  # track approximate solutions (1) or not (0). Default: 0
-ur5e:
+manipulator:
   planner_configs:
     - AnytimePathShortening
     - SBL
@@ -193,5 +193,3 @@ ur5e:
     - AITstar
     - ABITstar
     - BITstar
-  projection_evaluator: joints(shoulder_pan_joint,shoulder_lift_joint)
-  longest_valid_segment_fraction: 0.005
