--- a/robot_moveit/cam_ur5e_moveit_config/config/stomp_planning.yaml
+++ b/robot_moveit/cam_ur5e_moveit_config/config/stomp_planning.yaml
@@ -1,5 +1,5 @@
-stomp/ur5e:
-  group_name: ur5e
+stomp/manipulator:
+  group_name: manipulator
   optimization:
     num_timesteps: 60
     num_iterations: 40
