--- a/robot_moveit/cam_ur5e_robotiq_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5e_robotiq_moveit_config/config/fake_controllers.yaml
@@ -11,9 +11,9 @@ controller_list:
   - name: fake_gripper_controller
     type: $(arg fake_execution_type)
     joints:
-      - left_outer_knuckle_joint
+      - robotiq_85_left_knuckle_joint
 initial:  # Define initial robot poses per group
   - group: manipulator
     pose: home
   - group: gripper
-    pose: closed
+    pose: open
