--- a/robot_moveit/cam_ur5e_robotiq_moveit_config/config/fake_controllers.yaml
+++ b/robot_moveit/cam_ur5e_robotiq_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,6 @@
 controller_list:
   - name: fake_manipulator_controller
+# fake_manipulator_controller:
     type: $(arg fake_execution_type)
     joints:
       - shoulder_pan_joint
@@ -9,6 +10,7 @@ controller_list:
       - wrist_2_joint
       - wrist_3_joint
   - name: fake_gripper_controller
+# fake_gripper_controller:
     type: $(arg fake_execution_type)
     joints:
       - robotiq_85_left_knuckle_joint
