--- a/robot_moveit/cam_ur5e_robotiq_moveit_config/config/simple_moveit_controllers.yaml
+++ b/robot_moveit/cam_ur5e_robotiq_moveit_config/config/simple_moveit_controllers.yaml
@@ -1,5 +1,6 @@
 controller_list:
   - name: manipulator_controller
+# manipulator_controller:
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: True
@@ -11,6 +12,7 @@ controller_list:
       - wrist_2_joint
       - wrist_3_joint
   - name: gripper_controller
+# gripper_controller:  
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: True
