--- a/robot_moveit/cam_ur5e_robotiq_moveit_config/config/ros_controllers.yaml
+++ b/robot_moveit/cam_ur5e_robotiq_moveit_config/config/ros_controllers.yaml
@@ -2,10 +2,12 @@
 moveit_sim_hw_interface:
   joint_model_group: manipulator
   joint_model_group_pose: home
+
 # Settings for ros_control_boilerplate control loop
 generic_hw_control_loop:
   loop_hz: 300
   cycle_time_error_threshold: 0.01
+
 # Settings for ros_control hardware interface
 hardware_interface:
   joints:
@@ -17,73 +19,65 @@ hardware_interface:
     - wrist_3_joint
     - robotiq_85_left_knuckle_joint
   sim_control_mode: 1  # 0: position, 1: velocity
-# # Publish all joint states
-# # Creates the /joint_states topic necessary in ROS
-# joint_state_controller:
-#   type: joint_state_controller/JointStateController
-#   publish_rate: 50
 
-controller_list:
-  - name: manipulator_controller
-# manipulator_controller:
-    action_ns: follow_joint_trajectory
-    default: True
-    type: FollowJointTrajectory
-    joints:
-      - shoulder_pan_joint
-      - shoulder_lift_joint
-      - elbow_joint
-      - wrist_1_joint
-      - wrist_2_joint
-      - wrist_3_joint
+# Publish all joint states
+# Creates the /joint_states topic necessary in ROS
+joint_state_controller:
+  type: joint_state_controller/JointStateController
+  publish_rate: 50
 
-  - name: gripper_controller
-# gripper_controller:
-    action_ns: follow_joint_trajectory
-    default: True
-    type: FollowJointTrajectory
-    joints:
-      - robotiq_85_left_knuckle_joint
-# manipulator_controller:
-#   type: effort_controllers/JointTrajectoryController
-#   joints:
-#     - shoulder_pan_joint
-#     - shoulder_lift_joint
-#     - elbow_joint
-#     - wrist_1_joint
-#     - wrist_2_joint
-#     - wrist_3_joint
-#   gains:
-#     shoulder_pan_joint:
-#       p: 1000
-#       d: 50
-#       i: 10
-#       i_clamp: 100
-#     shoulder_lift_joint:
-#       p: 5000
-#       d: 30
-#       i: 100
-#       i_clamp: 400
-#     elbow_joint:
-#       p: 5000
-#       d: 50
-#       i: 10
-#       i_clamp: 100
-#     wrist_1_joint:
-#       p: 200
-#       d: 20
-#       i: 10
-#       i_clamp: 100
-#     wrist_2_joint:
-#       p: 100
-#       d: 10
-#       i: 0.1
-#       i_clamp: 100
-#     wrist_3_joint:
-#       p: 10
-#       d: 1
-#       i: 0.1
-#       i_clamp: 100
+#===================
+# Gazebo Controller
+#===================
+manipulator_controller:
+  type: effort_controllers/JointTrajectoryController
+  joints:
+    - shoulder_pan_joint
+    - shoulder_lift_joint
+    - elbow_joint
+    - wrist_1_joint
+    - wrist_2_joint
+    - wrist_3_joint
+  constraints:
+    goal_time: 0.6
+    stopped_velocity_tolerance: 0
+    shoulder_pan_joint: {trajectory: 0.1, goal: 0.01}
+    shoulder_lift_joint: {trajectory: 0.1, goal: 0.01}
+    elbow_joint: {trajectory: 0.1, goal: 0.01}
+    wrist_1_joint: {trajectory: 0.1, goal: 0.01}
+    wrist_2_joint: {trajectory: 0.1, goal: 0.01}
+    wrist_3_joint: {trajectory: 0.1, goal: 0.01}
+  gains:
+    shoulder_pan_joint:
+      p: 1000
+      d: 50
+      i: 10
+      i_clamp: 100
+    shoulder_lift_joint:
+      p: 5000
+      d: 30
+      i: 100
+      i_clamp: 400
+    elbow_joint:
+      p: 5000
+      d: 50
+      i: 10
+      i_clamp: 100
+    wrist_1_joint:
+      p: 200
+      d: 20
+      i: 10
+      i_clamp: 100
+    wrist_2_joint:
+      p: 100
+      d: 10
+      i: 0.1
+      i_clamp: 100
+    wrist_3_joint:
+      p: 10
+      d: 1
+      i: 0.1
+      i_clamp: 100
 gripper_controller:
   type: effort_controllers/JointTrajectoryController
   joints:
@@ -94,3 +88,25 @@ gripper_controller:
       d: 0
       i: 0
       i_clamp: 1
+
+#===================
+# MoveIt Controller
+#===================
+# controller_list:
+#   - name: moveit_manipulator_controller
+#     action_ns: follow_joint_trajectory
+#     default: True
+#     type: FollowJointTrajectory
+#     joints:
+#       - shoulder_pan_joint
+#       - shoulder_lift_joint
+#       - elbow_joint
+#       - wrist_1_joint
+#       - wrist_2_joint
+#       - wrist_3_joint
+#   - name: moveit_gripper_controller
+#     action_ns: follow_joint_trajectory
+#     default: True
+#     type: FollowJointTrajectory
+#     joints:
+#       - robotiq_85_left_knuckle_joint
